# YADRO_url_alias_service

./: .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: main.yml  mypy_check.yml  safety_check.yml  style_check.yml
infra/: docker-compose.yaml
src/: .dockerignore  .env.example  Dockerfile  Makefile  makefile  pyproject.toml
src/alembic/: README.md  env.py
src/alembic/versions/: aboba.py  add.py  add_expire.py  add_stats.py  add_url.py  check.py  fix_relation.py  fix_relations.py  ref.py  refactoring.py
src/app/: const.py  main.py
src/app/api/: dependencies.py  main_router.py
src/app/api/v1/: __init__.py  auth.py  redirect.py  statistic.py  url.py
src/app/auth/: __init__.py  auth.py
src/app/auth/dependencies/: __init__.py
src/app/auth/security/: __init__.py  password.py
src/app/auth/validators/: __init__.py  password.py
src/app/core/: __init__.py  db.py  settings.py
src/app/dao/: __init__.py  url.py  user.py
src/app/models/: __init__.py  statistics.py  url.py  user.py
src/app/schemas/: __init__.py  auth.py  url.py
src/app/services/: __init__.py  add_pair.py  generate.py  redirect.py
src/app/tasks/: __init__.py  scheduler.py
src/app/url/: __init__.py  add_pair.py  deactivate.py  generate.py  redirect.py
