[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Rxyalxrd",email = "3m3rcy3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "apscheduler>=3.11.0",
]

[tool.mypy]
plugins = ['pydantic.mypy']
strict = true
ignore_missing_imports = true

[dependency-groups]
linter = [
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "ruff>=0.11.12",
]
types = [
    "types-passlib>=1.7.7.20250601",
    "types-python-jose>=3.5.0.20250531",
]
